fix: layout shift by object fit

--- a/components/ScreenShot/index.module.css
+++ b/components/ScreenShot/index.module.css
@@ -11,7 +11,6 @@
 }
 .wrapper img {
   vertical-align: bottom;
-  object-fit: cover;
   width: 100%;
   height: 100%;
 }
